ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/another_bucket_typo.stderr
error: only 'bucket' and 'lambda' resources are supported. Is this a typo for bucket?
 --> tests/fails/another_bucket_typo.rs:5:9
  |
5 |         buck uniquename
  |         ^^^^
